<resources>
    <string name="app_name">Android_Lab3</string>
    <string name="action_settings">Settings</string>
    <string name="seekBar_key" translatable="false">seekBarValue</string>
    <string name="height_Score_Key" translatable="false">heightScore</string>
    <string name="debug_Mode_Key" translatable="false">debugMode</string>
    <string name="sliding_Window_Key" translatable="false">slidingWindow</string>
    <string name="background_Key" translatable="false">background</string>
    <string name="highscore">Highscore (M)</string>
    <string name="initial_height_value" translatable="false">0.00</string>
    <string name="time">Time (Sec)</string>
    <string name="acceleration">Acceleration:</string>
    <string name="sliding_window_max">Sliding Window max:</string>
    <string name="acc_initial_value" translatable="false">0.00</string>
    <string name="currenrt_height">Height: </string>
    <string name="min_acc_value">MIN_ACC VALUE</string>
    <string name="sliding_window_size">SLIDING_WINDOW SIZE</string>
    <string name="reset_highscore">RESET HIGHSCORE</string>
    <string name="select_background">SELECT BACKGROUND</string>


    <integer name="updateFrequency">20</integer>
    <integer name="threshold">10</integer>

    <string-array name="array_background">
        <item>medieval church</item>
        <item>nature</item>
        <item>lines</item>
    </string-array>

</resources>
