<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/animation_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/italy"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/height_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/currenrt_height"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ball"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/ball" />


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:id="@+id/highscore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/highscore"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="start"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/highscore_height_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="2.5"
            android:text="@string/initial_height_value"
            android:textAlignment="textEnd"
            android:textSize="25sp" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acceleration"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="start"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/acc_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="2.5"
            android:text="@string/acc_initial_value"
            android:textAlignment="textEnd"
            android:textSize="20sp" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:id="@+id/acc_sliding_window"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sliding_window_max"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="start"
            android:layout_weight="1"/>



        <TextView
            android:id="@+id/sliding_window_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="2.5"
            android:text="@string/acc_initial_value"
            android:textAlignment="textEnd"
            android:textSize="20sp" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/time_in_air"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="start"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/time_in_air_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="2.5"
            android:text="@string/acc_initial_value"
            android:textAlignment="textEnd"
            android:textSize="20sp" />

    </TableRow>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />



    <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Distance: "
        android:textSize="15dp"
        android:id="@+id/distance"/>-->





</LinearLayout>